<resources>
    <string name="app_name">EatRoulette</string>
    <string name="title">EatRoulette</string>
    <string name="roll">Roll</string>
    <string name="logout">Sign out</string>
    <string name="friendList">Friends</string>
    <string name="restaurantlist">Restaurants</string>

    <string name="noCharacs">No characteristics</string>
    <string name="noTypes">No types</string>
    <string name="noAllergens">No allergens</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_on_map">View on Map</string>
    <string name="re_roll">Re roll</string>

    <string name="loginTitle">Connection</string>
    <string name="loginHint">Login</string>
    <string name="loginPassword">Password</string>
    <string name="loginValidate">Validate</string>
    <string name="token">token</string>
    <string name="errorMessage">An error occurred</string>
    <string name="errorLoginMessage">Wrong Email and / or password</string>
    <string name="errorNoConnection">Please check your internet connection</string>

    <string name="registerTitle">Register</string>
    <string name="passwordConfirmationHint">Confirm password</string>
    <string name="lastNameHint">Name</string>
    <string name="firstNameHint">First Name</string>
    <string name="addressHint">Address</string>
    <string name="cityHint">City</string>
    <string name="emailHint">Email</string>
    <string name="postalCodeHint">Postal Code</string>
    <string name="phoneHint">Phone</string>
    <string name="fillEverything">Please fill all the fields</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="wrongEmail">Wrong email</string>
    <string name="wrongPhone">Wrong phone</string>
    <string name="wrongPostalCode">Wrong Postal Code</string>
    <string name="errorRegisterMessage">Register failed</string>

</resources>